# AdvPT

project/: CMakeLists.txt  generator.sh
project/factorio/: CMakeLists.txt  factorio.cpp
project/factorio-data/: input.json  my-challenge.json  my-challenge2.json
project/factorio/cpp_files/: CMakeLists.txt  crafting_category.cpp  event_generator.cpp  events.cpp  factorio_game.cpp  factory.cpp  hash.cpp  item.cpp  order.cpp  recipe.cpp  simulator.cpp  technology.cpp
project/factorio/hpp_files/: crafting_category.hpp  event_generator.hpp  event_generator2.hpp  events.hpp  factorio_game.hpp  factory.hpp  factory_enum.hpp  hash.hpp  input_parser.hpp  item.hpp  order.hpp  recipe.hpp  simulator.hpp  technology.hpp
